# CUDA-transformer

./: CMakeLists.txt  CUDA-transformer.cpp  CodeGenerator.cpp  OptimizationTypes.txt  README.md
include/: CUDA_ASTConsumer.h  CUDA_ASTVisitor.h  CUDA_AnalysisVisitor.h  CUDA_FrontendAction.h  CUDA_TransformVisitor.h  Expressions.h  OptimizationInfo.h  TransformHandler.h  Transformer.h  optimizationInfo.h
include/Commands/: RemoveSyncThreadCommand.h  ReplaceSyncWithWarpCommand.h  TransformCommand.h
src/: CUDA-transformer.cpp  CUDA_ASTConsumer.cpp  CUDA_ASTConsumer.h  CUDA_ASTVisitor.cpp  CUDA_ASTVisitor.h  CUDA_AnalysisVisitor.cpp  CUDA_TransformVisitor.cpp  Expressions.h  TransformHandler.cpp  Transformer.cpp  Transformer.h
src/Commands/: ChooseIfElseBranch.cpp  ChooseIfElseBranch.h  KernelCallReduction.cpp  KernelCallReduction.h  LoopPerforation.cpp  LoopPerforation.h  RemoveIfElseBranches.cpp  RemoveIfElseBranches.h  RemoveSyncThread.cpp  RemoveSyncThread.h  RemoveSyncThreadCommand.cpp  ReplaceAtomicWithBlock.cpp  ReplaceAtomicWithBlock.h  ReplaceAtomicWithDirect.cpp  ReplaceAtomicWithDirect.h  ReplaceDoubleWithFloat.cpp  ReplaceDoubleWithFloat.h  ReplaceSyncThreadWithActive.cpp  ReplaceSyncThreadWithActive.h  ReplaceSyncThreadWithTile.cpp  ReplaceSyncThreadWithTile.h  ReplaceSyncWithWarp.cpp  ReplaceSyncWithWarp.h  ReplaceSyncWithWarpCommand,cpp
