set(LLVM_LINK_COMPONENTS support)
    add_clang_executable(CUDA-transformer
        src/CUDA-transformer.cpp
        src/CUDA_ASTVisitor.cpp
        src/CUDA_ASTConsumer.cpp
        src/Commands/RemoveSyncThread.cpp
        src/Commands/ReplaceSyncWithWarp.cpp
        src/Commands/ReplaceAtomicWithBlock.cpp
        src/Commands/ReplaceAtomicWithDirect.cpp
        src/Commands/ReplaceSyncThreadWithTile.cpp
        src/Commands/ReplaceSyncThreadWithActive.cpp
        src/Transformer.cpp
    )
    target_link_libraries(CUDA-transformer
        PRIVATE
        clangAST
        clangASTMatchers
        clangBasic
        clangFrontend
        clangSerialization
        clangTooling
        clangEdit
    )
